# matrix2genAI

./: .grading_results.json  CURRICULUM.md  LICENSE  PHILOSOPHY.md  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
scripts/: grade.py
src/mlfs/common/: tensor.py
src/mlfs/tools/: check_grad.py
stages/s01_number_systems_and_bits/: README.md  READNE.md  spec.md
stages/s01_number_systems_and_bits/starter/: number.py  train_demo.py
stages/s01_number_systems_and_bits/tests/: test_fixed_point.py  test_numeric_stability.py
stages/s02_linear_algebra/: README.md  spec.md
stages/s02_linear_algebra/starter/: decomposition.py  linear_systems.py  matrix_ops.py  vector_ops.py
stages/s02_linear_algebra/tests/: test_decomposition.py  test_linear_systems.py  test_matrix_ops.py  test_vector_ops.py
stages/s03_calculus/: README.md  spec.md
stages/s03_calculus/starter/: autodiff.py  numerical_diff.py
stages/s03_calculus/tests/: test_autodiff.py  test_numerical_diff.py
stages/s04_probability/: README.md  spec.md
stages/s05_optimization/: README.md  spec.md
stages/s06_linear_regression/: README.md  spec.md
stages/s07_logistic_regression/: README.md  spec.md
stages/s08_feature_engineering/: README.md  spec.md
stages/s09_regularization/: README.md  spec.md
stages/s10_decision_trees/: README.md  spec.md
stages/s11_perceptrons/: README.md  spec.md
stages/s12_feedforward_networks/: README.md
stages/s13_cnn/: README.md  spec.md
stages/s14_rnn/: README.md  spec.md
stages/s15_attention/: README.md  spec.md
(+78 files in other folders)
