[project]
name = "matrix2genai"
version = "0.1.0"
description = "Nand2Tetris-style ML curriculum for ML/DL/GenAI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "typing-extensions>=4.11",
]

[project.optional-dependencies]
torch = ["torch"]

[tool.uv]
dev-dependencies = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-json-report>=1.5",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "mypy>=1.10",
]

# Tell Hatch exactly what to ship (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/mlfs"]

[tool.hatch.build.targets.sdist]
include = [
  "src/mlfs",
  "stages",
  "README.md",
  "ruff.toml",
  "mypy.ini",
  "pytest.ini",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

